trunk/Archive/025dc4dcdae1a81ebf2532d8b0d21be9-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:10:42: error: no matching function for call to ‘NonTrivial::NonTrivial()’
     NonTrivial* nt = new NonTrivial[ 500 ];
                                          ^
main.cpp:10:42: note: candidates are:
main.cpp:4:5: note: NonTrivial::NonTrivial(int)
     NonTrivial ( int arf ) {
     ^
main.cpp:4:5: note:   candidate expects 1 argument, 0 provided
main.cpp:2:8: note: constexpr NonTrivial::NonTrivial(const NonTrivial&)
 struct NonTrivial {
        ^
main.cpp:2:8: note:   candidate expects 1 argument, 0 provided
main.cpp:2:8: note: constexpr NonTrivial::NonTrivial(NonTrivial&&)
main.cpp:2:8: note:   candidate expects 1 argument, 0 provided
main.cpp:10:17: warning: unused variable ‘nt’ [-Wunused-variable]
     NonTrivial* nt = new NonTrivial[ 500 ];
                 ^
